[package]
name = "blockchain1-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.6"
sha3 = "0.10.6"
chrono = "0.4.19"
hex = "0.4"
bigint = "4.4.3"
sled = "0.34"